--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "ajv": "^6.4.0",
     "bootstrap": "^4.1.0",
     "jquery": "^3.3.1",
+    "material-ui": "^1.0.0-beta.43",
     "popper.js": "^1.14.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
