--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.0.0-rc.1",
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "ajv": "^6.4.0",
+    "@material-ui/icons": "^1.0.0-rc.0",
+    "ajv": "^6.5.0",
     "jquery": "^3.3.1",
-    "material-ui": "^1.0.0-beta.43",
+    "material-ui": "^1.0.0-beta.47",
     "popper.js": "^1.14.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
