--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,15 @@
     "@material-ui/core": "^1.0.0-rc.1",
     "@material-ui/icons": "^1.0.0-rc.0",
     "ajv": "^6.5.0",
+    "draft-js": "^0.10.5",
     "jquery": "^3.3.1",
     "material-ui": "^1.0.0-beta.47",
+    "megadraft": "^0.4.37",
     "popper.js": "^1.14.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "quill": "^1.3.6",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-quill": "^1.2.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
