--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
-    "@material-ui/icons": "^1.0.0-rc.0",
-    "ajv": "^6.5.0",
+    "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^1.1.0",
+    "ajv": "^6.5.1",
     "draft-js": "^0.10.5",
     "jquery": "^3.3.1",
     "material-ui": "^1.0.0-beta.47",
@@ -15,7 +15,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-quill": "^1.2.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
