--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "draft-js": "^0.10.5",
     "jquery": "^3.3.1",
     "material-ui": "^1.0.0-beta.47",
+    "material-ui-pickers": "^1.0.0-rc.9",
     "megadraft": "^0.4.37",
+    "moment": "^2.22.2",
     "popper.js": "^1.14.3",
     "quill": "^1.3.6",
     "react": "^16.4.0",
